# ethernet-info-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: coverage.yml
ethernet-info/: Cargo.toml  LICENSE  README.md
ethernet-info/examples/: show-all-interfaces-info.rs  show-interface-info.rs
ethernet-info/scripts/: test-cov.sh
ethernet-info/src/: errors.rs  ethtool_const.rs  internal.rs  lib.rs  settings_parser.rs
ethernet-info/tests/: test_ethtool.rs
ethernet-info/tests/utils/: ethtool_parser.rs
examples/: show-all-interfaces-info.rs  show-interface-info.rs
scripts/: test-cov.sh
src/: errors.rs  ethtool_const.rs  internal.rs  lib.rs  settings_parser.rs
tests/: test_ethtool.rs
tests/utils/: ethtool_parser.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
